<resources>
    <string name="app_name">deScam</string>
    <string name="input_email">Before we continue, please input your email address first</string>
    <string name="email_hint">Email</string>
    <string name="submit_email">submit email</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dark_mode">Dark mode</string>
    <string name="choose_picture">Choose from gallery</string>
    <string name="choose_another_picture">Choose another picture</string>
    <string name="extract_text">Extract text</string>
    <string name="extracted_text_result">[Extracted text result]</string>
    <string name="empty_input_warning">Input can\'t be empty</string>
    <string name="result_added">Scan result added to database</string>
    <string name="tab_gallery">Gallery</string>
    <string name="tab_text">Text</string>
    <string name="upload">Upload</string>
    <string name="scan_text_hint">Insert text here..</string>
    <string name="email">Email</string>
    <string name="checked_text">Lorem ipsum dolor sit amet</string>
    <string name="status">Status :</string>
    <string name="status_value">Legal/Illegal</string>
    <string name="textinput_email_warning">Invalid Email</string>
    <string name="pref_info">You logged in as</string>
    <string name="pref_email">example@email.com</string>
    <string name="logout">Logout</string>
</resources>